# math_finance

./: .gitignore  Cargo.toml  LICENSE  README.md
pricing/: Cargo.toml  README.md
pricing/benches/: mc_benchmark.rs
pricing/src/: lib.rs
pricing/src/analytic/: black_scholes.rs
pricing/src/common/: models.rs
pricing/src/simulation/: american_option.rs  basket_option.rs  distributions.rs  european_option.rs  european_option2.rs  gbm.rs  greek_engine.rs  mod.rs  monte_carlo.rs  monte_carlo2.rs  multivariate_gbm.rs  path_generator.rs
pricing/src/simulation/products/: basket_option.rs  european_option.rs  mod.rs
pricing/src/simulation/sde/: gbm.rs  mod.rs  multivariate_gbm.rs
python/monte_carlo/: gbm.py
risk/: Cargo.toml
risk/src/: error.rs  lib.rs  risk_figures.rs
