[package]
name        = "pricing"
version     = "0.0.0"
edition     = "2021"
author      = "snusnu"
repository  = "https://github.com/snusnusnu/math_finance"
description = "Derivatives pricing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
probability = "0.18.0"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.3.5"
rand_hc = "0.3.0"
rand_isaac = "0.3.0"

[[bench]]
name = "mc_benchmark"
harness = false