[package]
name        = "risk"
version     = "0.0.0"
edition     = "2021"
author      = "snusnu"
repository  = "https://github.com/snusnusnu/math_finance"
description = "Risk figures"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
